--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # This is the basic site configuration
-title: "My Title"  # This will change the main heading
-description: "A description of your site" # This often appears as a subtitle
+title: "Austin Vines"  # This will change the main heading
+description: "Game Developer and Educator" # This often appears as a subtitle
 author:
   name: "Austin Vines"  # This can be used by the theme
 
 # Settings for GitHub Pages
-remote_theme: jekyll/minima  # This specifies the theme you are using
+remote_theme: jekyll/Architect  # This specifies the theme you are using
